WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60628
Fix the build with ENABLE_PLUGIN_PROCESS
https://bugs.webkit.org/show_bug.cgi?id=60628
Summary
Fix the build with ENABLE_PLUGIN_PROCESS
Carlos Garcia Campos
Reported
2011-05-11 08:03:52 PDT
In WebProcess/Plugins/PluginProxy.cpp, pluginController->isAcceleratedCompositingEnabled() is used without using a #ifdef block to check ACCELERATED_COMPOSITING.
Attachments
Patch
(2.50 KB, patch)
2011-05-11 08:07 PDT
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-05-11 08:07:19 PDT
Created
attachment 93119
[details]
Patch
Carlos Garcia Campos
Comment 2
2011-05-12 00:33:08 PDT
Committed
r86317
: <
http://trac.webkit.org/changeset/86317
>
WebKit Review Bot
Comment 3
2011-05-12 01:28:04 PDT
http://trac.webkit.org/changeset/86317
might have broken Leopard Intel Debug (Tests) The following tests are not passing: editing/deleting/delete-ligature-001.html editing/deleting/delete-ligature-002.html editing/deleting/delete-ligature-003.html platform/mac/editing/input/devanagari-ligature.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug