2011-05-12  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Martin Robinson.

        Fix the build with ENABLE_PLUGIN_PROCESS
        https://bugs.webkit.org/show_bug.cgi?id=60628

        * WebProcess/Plugins/PluginProxy.cpp:
        (WebKit::PluginProxy::initialize): Move the call to
        pluginController->isAcceleratedCompositingEnabled() to a #ifdef block.
        * WebProcess/Plugins/PluginProxy.h: Add include for <WebCore/IntRect.h>.

Canonical link: https://commits.webkit.org/75974@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86317 268f45cc-cd09-0410-ab3c-d52691b4dbfc